(Service) Update Get Daily-Record
